force-app/main/default/objects/Hebrew_Dates__c/Hebrew_Dates__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Hebrew Dates</label>
</CustomObject>