force-app/main/default/objects/Hebrew_Dates__c/fields/Current_Year_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Hebrew__c</fullName>
    <label>Current Year (Hebrew)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>