force-app/main/default/objects/Hebrew_Dates__c/fields/Major_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Major_Holiday__c</fullName>
    <label>Major Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>