force-app/main/default/objects/Hebrew_Dates__c/fields/Major_Holiday_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Major_Holiday_Hebrew__c</fullName>
    <label>Major Holiday Hebrew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>