force-app/main/default/objects/Hebrew_Dates__c/fields/Minor_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Minor_Holiday__c</fullName>
    <label>Minor Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>