force-app/main/default/objects/Hebrew_Dates__c/fields/Minor_Holiday_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Minor_Holiday_Hebrew__c</fullName>
    <label>Minor Holiday Hebrew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>