force-app/main/default/objects/Hebrew_Dates__c/fields/Parashat_English__c.field-meta.xml
<CustomField>
    <fullName>Parashat_English__c</fullName>
    <label>Parashat English</label>
    <length>100</length>
    <type>Text</type>
</CustomField>