force-app/main/default/objects/Hebrew_Dates__c/fields/Parashat_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Parashat_Hebrew__c</fullName>
    <label>Parashat Hebrew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>