force-app/main/default/objects/Hebrew_Dates__c/fields/Rosh_Chodesh__c.field-meta.xml
<CustomField>
    <fullName>Rosh_Chodesh__c</fullName>
    <label>Rosh Chodesh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>