force-app/main/default/objects/Hebrew_Dates__c/fields/Rosh_Chodesh_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Rosh_Chodesh_Hebrew__c</fullName>
    <label>Rosh Chodesh Hebrew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>