force-app/main/default/objects/Hebrew_Dates__c/fields/Today_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Today_Hebrew__c</fullName>
    <label>Today (Hebrew)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>